@@ -3,27 +3,37 @@ package org.molgenis.data.populate;
 import static com.google.common.collect.Streams.stream;
 import static java.util.Collections.singletonList;
 import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.toList;
 import static org.molgenis.data.meta.AttributeType.DATE;
 import static org.molgenis.data.meta.AttributeType.DATE_TIME;
 import static org.molgenis.data.meta.AttributeType.STRING;
+import static org.molgenis.data.semantic.Relation.hasIDDigitCount;
+import static org.molgenis.data.semantic.Relation.hasIDPrefix;
+import static org.molgenis.data.semantic.Relation.type;
+import static org.molgenis.data.semantic.Vocabulary.SCRAMBLED;
 
+import java.text.DecimalFormat;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneId;
+import java.util.Optional;
 import org.molgenis.data.Entity;
 import org.molgenis.data.meta.AttributeType;
 import org.molgenis.data.meta.model.Attribute;
+import org.molgenis.data.meta.model.Tag;
+import org.molgenis.util.IntScrambler;
 import org.molgenis.util.UnexpectedEnumException;
 import org.springframework.stereotype.Component;
 
 /** Populate entity values for auto attributes */
 @Component
 public class AutoValuePopulator {
-  private final IdGenerator idGenerator;
 
-  public AutoValuePopulator(IdGenerator idGenerator) {
+  private final IdGenerator idGenerator;
+  private final Sequences sequences;
+
+  public AutoValuePopulator(IdGenerator idGenerator, Sequences sequences) {
     this.idGenerator = requireNonNull(idGenerator);
+    this.sequences = requireNonNull(sequences);
   }
 
   /**
@@ -41,8 +51,56 @@ public class AutoValuePopulator {
         && idAttr.isAuto()
         && entity.getIdValue() == null
         && (idAttr.getDataType() == STRING)) {
-      entity.set(idAttr.getName(), idGenerator.generateId());
+      var id = generateFormattedSequenceId(idAttr).orElseGet(idGenerator::generateId);
+      entity.set(idAttr.getName(), id);
     }
+  }
+
+  /**
+   * Generates a new sequence ID if the attribute is tagged with ID prefix and ID digit count. If
+   * the ID is also tagged with "scrambled", it will scramble the digit part.
+   *
+   * @param attribute the ID attribute
+   * @return formatted ID, in sequence with
+   */
+  private Optional<String> generateFormattedSequenceId(Attribute attribute) {
+    return stream(attribute.getTags())
+        .filter(this::isIdPrefix)
+        .findFirst()
+        .map(Tag::getValue)
+        .flatMap(
+            idPrefix ->
+                stream(attribute.getTags())
+                    .filter(this::isIdDigitCount)
+                    .findFirst()
+                    .map(Tag::getValue)
+                    .map(Integer::parseInt)
+                    .map("0"::repeat)
+                    .map(zeroes -> idPrefix + zeroes))
+        .map(DecimalFormat::new)
+        .map(
+            format -> {
+              int sequence = (int) sequences.generateId(attribute);
+              if (stream(attribute.getTags()).anyMatch(this::isScrambled)) {
+                var scrambler = IntScrambler.forDecimalFormat(format);
+                return format.format(scrambler.scramble(sequence));
+              } else {
+                return format.format(sequence);
+              }
+            });
+  }
+
+  private boolean isScrambled(Tag tag) {
+    return type.getIRI().equals(tag.getRelationIri())
+        && SCRAMBLED.toString().equals(tag.getObjectIri());
+  }
+
+  private boolean isIdPrefix(Tag tag) {
+    return hasIDPrefix.getIRI().equals(tag.getRelationIri());
+  }
+
+  private boolean isIdDigitCount(Tag tag) {
+    return hasIDDigitCount.getIRI().equals(tag.getRelationIri());
   }
 
   private static void generateAutoDateOrDateTime(
@@ -59,7 +117,7 @@ public class AutoValuePopulator {
                     return false;
                   }
                 })
-            .collect(toList());
+            .toList();
 
     // set current date for auto date and datetime attributes
     for (Entity entity : entities) {
